[package]
name = "screening_project"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21" 
hyper = { version = "1", features = ["http1", "client"] }
fastwebsockets = { version = "0.7", features = ["upgrade"]} # Include "upgrade" since it's optional 
http-body-util = "0.1" 
url = "2"
anyhow = "1" 
bytes = "1"
hyper-util = { version = "0.1", features = ["client-legacy"] }
webpki-roots = "0.25" 
http = "0.2"
clap = { version = "4.5.40", features = ["derive"] } 
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
futures = "0.3" 